// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="title"
    >
      zendesk chat
    </div>
    <div
      class="splashDisplayContainer splashPadding"
      role="button"
      tabindex="0"
    >
      <table
        class="splashTable"
      >
        <tbody>
          <tr>
            <td
              class="textContainer"
            />
            <td
              class="imageContainer"
            >
              <span
                class="container chatIcon Icon--channelChoice-chat"
                data-testid="Icon--channelChoice-chat"
                type="Icon--channelChoice-chat"
              >
                widget-icon_channelChoice-chat.svg
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="inputContainer"
    >
      <input
        aria-invalid="false"
        class="input Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
        data-garden-id="textfields.input"
        data-garden-version="3.7.0"
        placeholder="Type your message here"
        value=""
      />
      <span
        class="container sendButton Icon--sendChat"
        data-testid="Icon--sendChat"
        role="button"
        tabindex="0"
        type="Icon--sendChat"
      >
        widget-icon_sendChat.svg
      </span>
    </div>
    <span
      class="container minimizeButton Icon--dash"
      data-testid="Icon--dash"
      role="button"
      tabindex="0"
      type="Icon--dash"
    >
      widget-icon_dash.svg
    </span>
  </div>
</div>
`;

exports[`with chatBadgeColor passed in 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="title"
    >
      zendesk chat
    </div>
    <div
      class="splashDisplayContainer splashPadding"
      role="button"
      tabindex="0"
    >
      <table
        class="splashTable"
      >
        <tbody>
          <tr>
            <td
              class="textContainer"
            />
            <td
              class="imageContainer"
            >
              <span
                class="container chatIcon Icon--channelChoice-chat"
                data-testid="Icon--channelChoice-chat"
                type="Icon--channelChoice-chat"
              >
                widget-icon_channelChoice-chat.svg
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="inputContainer"
    >
      <input
        aria-invalid="false"
        class="input Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
        data-garden-id="textfields.input"
        data-garden-version="3.7.0"
        placeholder="Type your message here"
        value=""
      />
      <span
        class="container sendButton Icon--sendChat"
        data-testid="Icon--sendChat"
        role="button"
        tabindex="0"
        type="Icon--sendChat"
      >
        widget-icon_sendChat.svg
      </span>
    </div>
    <span
      class="container minimizeButton Icon--dash"
      data-testid="Icon--dash"
      role="button"
      tabindex="0"
      type="Icon--dash"
    >
      widget-icon_dash.svg
    </span>
  </div>
</div>
`;

exports[`with label passed in 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="title"
    >
      zendesk chat
    </div>
    <div
      class="splashDisplayContainer splashPadding"
      role="button"
      tabindex="0"
    >
      <table
        class="splashTable"
      >
        <tbody>
          <tr>
            <td
              class="textContainer"
            >
              wanna chat?
            </td>
            <td
              class="imageContainer"
            >
              <span
                class="container chatIcon Icon--channelChoice-chat"
                data-testid="Icon--channelChoice-chat"
                type="Icon--channelChoice-chat"
              >
                widget-icon_channelChoice-chat.svg
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="inputContainer"
    >
      <input
        aria-invalid="false"
        class="input Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
        data-garden-id="textfields.input"
        data-garden-version="3.7.0"
        placeholder="Type your message here"
        value=""
      />
      <span
        class="container sendButton Icon--sendChat"
        data-testid="Icon--sendChat"
        role="button"
        tabindex="0"
        type="Icon--sendChat"
      >
        widget-icon_sendChat.svg
      </span>
    </div>
    <span
      class="container minimizeButton Icon--dash"
      data-testid="Icon--dash"
      role="button"
      tabindex="0"
      type="Icon--dash"
    >
      widget-icon_dash.svg
    </span>
  </div>
</div>
`;
